fixed the header navigation mobile and desktop vew

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -9,7 +9,8 @@
 .page-wrap {
     color: black;
     position: relative;
-    width: 900px;
+    max-width: 1100px;
+    width: 80%;
     margin: 0 auto;
     line-height: 1.4;
     font-family:Arial, Helvetica, sans-serif;
